[package]
name = "rhododendron"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Asynchronously safe BFT protocol, futures-based implementation"
license = "GPL-3.0"
repository = "https://github.com/paritytech/rhododendron"

[dependencies]
futures = "0.1.17"
error-chain = "0.12"
log = "0.4"
parity-codec = { version = "3.0", optional = true }
parity-codec-derive = { version = "3.0", optional = true }

[dev-dependencies]
tokio-core = "0.1.12"
tokio-timer = "0.1.2"
parity-codec = "3.0"
parity-codec-derive = "3.0"

[features]
codec = ['parity-codec', 'parity-codec-derive']
